--- a/blocks/card.css
+++ b/blocks/card.css
@@ -30,6 +30,8 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 @media screen and (max-width: 627px) {
