--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,3 +1,5 @@
+/* finish styling preview modal and make resposive*/
+
 .modal {
   position: fixed;
   top: 0;
@@ -27,6 +29,19 @@
   border-radius: 8px;
 }
 
+.modal__container_type_preview {
+  padding: 0;
+  background-color: transparent;
+}
+
+.modal__image {
+  width: 100%;
+  max-height: 80vh;
+  max-width: 80vw;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 .modal__close-btn {
   position: absolute;
   top: 32px;
@@ -42,9 +57,21 @@
 }
 
 .modal__close-btn:hover {
-  opacity: 100%;
+  opacity: 1;
   transition: opacity 0.3s linear 0s;
   cursor: pointer;
+}
+
+.modal__close-btn_type_preview {
+  background-image: url("../images/preview-close-Icon.svg");
+  top: 0;
+  right: -52.5px;
+  opacity: 1;
+}
+
+.modal__close-btn_type_preview:hover {
+  opacity: 0.4;
+  transition: opacity 0.3s linear 0s;
 }
 
 .modal__title {
@@ -99,6 +126,19 @@
   color: #fcf5e5;
 }
 
+.modal__caption {
+  background-color: #212121;
+  color: #fff;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  margin: 12px 0 0;
+  display: table;
+  padding: 0 8px 0;
+  border-radius: 8px;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
@@ -109,6 +149,11 @@
     width: 300px;
   }
 
+  .modal__container_type_preview {
+    width: 288px;
+    padding: 0;
+  }
+
   .modal__title {
     font-size: 20px;
     margin: 10px 0 34px;
@@ -117,6 +162,11 @@
   .modal__close-btn {
     top: 12px;
     right: 12px;
+  }
+
+  .modal__close-btn_type_preview {
+    top: -48px;
+    left: 248px;
   }
 
   .modal__label {
@@ -132,5 +182,9 @@
   .modal__input {
     font-size: 16px;
     line-height: 1;
+  }
+
+  .modal__caption {
+    font-size: 16px;
   }
 }
