--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,5 +1,3 @@
-/* finish styling preview modal and make resposive*/
-
 .modal {
   position: fixed;
   top: 0;
@@ -117,6 +115,19 @@
   border: 1px solid rgba(33, 33, 33, 1);
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
+.modal__error {
+  display: block;
+  color: #ff0000;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1;
+  opacity: 0.7;
+}
 .modal__submit-btn {
   width: 156px;
   padding: 18px 0;
@@ -128,6 +139,16 @@
   line-height: 1;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   color: #fcf5e5;
+}
+
+.modal__submit-btn:hover {
+  background: rgba(33, 33, 33, 0.8);
+  cursor: pointer;
+  transition: opacity 0.3s linear 0s;
+}
+
+.modal__submit-btn_disabled {
+  background: rgba(33, 33, 33, 0.5);
 }
 
 .modal__caption {
